trying to fix vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,17 @@
   box-sizing: border-box;
 }
 
-html {
+html, body {
   font-family: 'Roboto', sans-serif;
   scroll-snap-type: y mandatory;
   scroll-snap-points-y: repeat(100vh);
-  background-color: #131616;
+  scroll-behavior: smooth;
+  background-color: #0C1016;
   color: white;
+  margin: 0;
 }
 
 header {
-  padding: 1rem;
   height: 100vh;
   scroll-snap-align: start;
   text-align: center;
@@ -26,7 +27,6 @@ main {
 }
 
 section {
-  padding: 1rem;
   height: 100vh;
   scroll-snap-align: start;
   text-align: center;
@@ -35,6 +35,15 @@ section {
 
 /* INDIVIDUAL ELEMENTS */
 /* title */
+.header-title {
+  height: 50vh;
+}
+
+/*h1 {
+  margin: 0;
+  vertical-align: middle;
+}*/
+
 .f-right {
   float: right;
 }
@@ -67,6 +76,17 @@ span.title-3 {
   margin: auto;
   width: 50%;
   font-size: 2vw;
+  height: 30vh;
+}
+
+.header-separator {
+  background-image: linear-gradient(to right, rgba(37, 37, 37, 0.133),rgb(255, 255, 254),rgba(37, 37, 37, 0.133));
+  margin: auto;
+  height: 0.2vh;
+  width: 25vw;
+  /*margin-bottom: 10%;
+  margin-top: 10%;*/
+  height: 20vh;
 }
 
 /* others */
@@ -89,14 +109,7 @@ footer {
 
 
 
-.separator {
-  background-image: linear-gradient(to right, rgba(37, 37, 37, 0.133),rgb(255, 255, 254),rgba(37, 37, 37, 0.133));
-  margin: auto;
-  height: 0.2vh;
-  width: 25vw;
-  margin-bottom: 10%;
-  margin-top: 10%;
-}
+
 
 h2{
   font-size:xx-large;
